--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>Pomodoro Timer</title>
   </head>
   <body>
     <div id="root"></div>
-    <script src="/pomodoro-timer/dist/bundle.js"></script>
+    <audio id="myAudio"><source src="bell.mp3" type="audio/mpeg"></audio>
+    <script src="/static/bundle.js"></script>
   </body>
 </html>
