--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>Pomodoro Timer</title>
+    <link rel="shortcut icon" type="image/png" href="favicon.png"/>
+    <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-precomposed.png">
   </head>
   <body>
     <div id="root"></div>
