Fix sound effect doesn't play on production

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <body>
     <div id="root"></div>
     <audio id="myAudio"><source src="bell.mp3" type="audio/mpeg"></audio>
-    <script src="/static/bundle.js"></script>
+    <!--For development -->
+    <!--<script src="/static/bundle.js"></script>-->
+    <!--For production-->
+    <script src="dist/bundle.js"></script>
   </body>
 </html>
